@@ -1,14 +1,14 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/rstox_base.r
-\name{downloadProjectZip_old}
-\alias{downloadProjectZip_old}
+\name{downloadProjectZip}
 \alias{downloadProjectZip}
+\alias{downloadProjectZip_old}
 \title{Download a zipped StoX project to a specified project path.}
 \usage{
-downloadProjectZip_old(URL, projectName = NULL, projectRoot = NULL,
+downloadProjectZip(URL, projectName = NULL, projectRoot = NULL,
   cleanup = TRUE, ow = TRUE, msg = TRUE)
 
-downloadProjectZip(URL, projectName = NULL, projectRoot = NULL,
+downloadProjectZip_old(URL, projectName = NULL, projectRoot = NULL,
   cleanup = TRUE, ow = TRUE, msg = TRUE)
 }
 \arguments{
